tests/failing/empty_struct_test.rs
use redbit::*;

#[derive(Redbit)]
struct EmptyStruct {

}

fn main() {
    // If it compiles successfully, we're good.
}
